# gosh-model

./: Cargo.toml
src/: blackbox.rs  edip.rs  lib.rs  lj.rs  model_properties.rs  task.rs  vasp.rs
src/blackbox/: cmd.rs
tests/files/: a.gjf  sample_special.txt  si-3x3x3.cif  si10.xyz  si10_.xyz  si3.gjf  si4.gjf
