# [[file:models.note::e15c455e][e15c455e]]
[package]
name = "gosh-model"
version = "0.1.1"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Chemical model for gosh"
homepage = "https://github.com/gosh-rs/gosh-model"
repository = "https://github.com/gosh-rs/gosh-model"
license = "MIT OR Apache-2.0"

[dependencies]
serde = "1.0"
envy = "0.4"
serde_json = "1.0"
envfile = "0.2"
tempfile = "3.0"
gosh-core = { version = "0.1.0", features=["adhoc"] }
bstr = "0.2"
duct = "0.13"
nix = "0.20"
edip = "0.1"


[features]
adhoc = []
# e15c455e ends here
